fix table alignment remove unneeded css class

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,6 +41,10 @@ html,
 	background-color: #222;
 }
 
+#app .table td, #app .table th {
+	vertical-align: middle;
+}
+
 #app .dark .page-header,
 #app .dark .table>thead>tr>th,
 #app .dark .table>tbody>tr>td {
